<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addPlayers.AddPlayersActivity"
    android:background="@color/purple_700">

    <ImageView
        android:id="@+id/btn_logout_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout"
        android:background="@drawable/style_btn_basic"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/card_basic">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugadores"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_single_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_player"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/rb_two_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_players"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_info_select_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_add_players"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_addPlayers_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@drawable/style_btn_basic"
        android:text="@string/btn_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

